<resources>
    <string name="app_name">ExameLP</string>

    <string name="message_entrar">Entrar</string>
    <string name="message_olvide">Me olvide la Clave</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_calculadora">Calculadora</string>


    <string name="message_01">1</string>
    <string name="message_02">2</string>
    <string name="message_03">3</string>
    <string name="message_04">4</string>
    <string name="message_05">5</string>
    <string name="message_06">6</string>
    <string name="message_07">7</string>
    <string name="message_08">8</string>
    <string name="message_09">9</string>
    <string name="message_00">0</string>

    <string name="message_point">.</string>
    <string name="message_sum">+</string>
    <string name="message_sub">-</string>
    <string name="message_mult">*</string>
    <string name="message_split">/</string>


    <string name="message_squar">√</string>
    <string name="message_perce">%</string>
    <string name="message_sin">sin</string>
    <string name="message_cos">cos</string>
    <string name="message_tan">tan</string>
    <string name="message_pi">π</string>
    <string name="message_pariz">(</string>
    <string name="message_parde">)</string>
    <string name="message_dele">←</string>


    <string name="message_equals">=</string>
    <string name="message_clean">CE</string>
    <string name="title_activity_olvide_clave">OlvideClave</string>


</resources>
