<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.corei7.calculadorajoselin.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/txtDisplay"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btn01"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_01"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/btn02"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_02"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767"
        app:layout_constraintHorizontal_bias="0.234" />

    <Button
        android:id="@+id/btn03"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_03"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/btn04"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_04"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btn05"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_05"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btn06"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_06"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btn07"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_07"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/btn08"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_08"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/btn09"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_09"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/btn00"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/message_00"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/btnPoint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_point"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintVertical_bias="0.9" />




    <Button
        android:id="@+id/btnSum"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_sum"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_sub"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_mult"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btnSplit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_split"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintVertical_bias="0.498" />


    <Button
        android:id="@+id/btnEquals"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:text="@string/message_equals"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/btnClean"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/message_clean"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintVertical_bias="0.365" />



    <Button
        android:id="@+id/btnSquar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_squar"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btnPerce"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_perce"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_sin"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/btnCos"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_cos"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_tan"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/btnPariz"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_pariz"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/btnPi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_pi"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/btnParde"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/message_parde"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btnDele"
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:text="@string/message_dele"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintVertical_bias="0.424" />


</android.support.constraint.ConstraintLayout>